[gd_scene load_steps=2 format=3 uid="uid://cxhjhp6u12lmt"]

[ext_resource type="Script" path="res://Scripts/InGame/Editors/DeckDisplayEntry.gd" id="1_c22ka"]

[node name="DeckDisplayEntry" type="Control"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 200.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c22ka")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.407843, 0.407843, 0.407843, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 82.0
offset_bottom = 11.5
grow_vertical = 2
text = "Mortimer"

[node name="PlusButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -15.5
offset_right = -47.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="MinusButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -15.5
offset_right = -8.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
text = "-"

[connection signal="pressed" from="PlusButton" to="." method="onPlusPressed"]
[connection signal="pressed" from="MinusButton" to="." method="onMinusPressed"]
